--- a/react0814-1.html
+++ b/react0814-1.html
@@ -20,6 +20,8 @@
     <!-- 步驟2：載入根元素（root） -->
     <div id="root"></div>
 
+    <!-- 使用JSX，type類行為"text/babel" -->
+
     <script type="text/babel">
         // 步驟3：建立React元件
         function App() {
@@ -39,9 +41,14 @@
             )
         }
         // 步驟4：渲染(顯示)App元件到根元件(root)上
-        const el = document.getElementById('root');
-        const root = ReactDOM.createRoot(el);
-        root.render(<App />);
+        //const el = document.getElementById('root');
+        //const root = ReactDOM.createRoot(el);
+        //root.render(<App />);
+        
+        //可以縮減成以下
+        ReactDOM
+        .createRoot(document.getElementById('root'))
+        .render(<App/>);
     </script>
 
 
