--- a/createLayout-陣列物件搭配迴圈.html
+++ b/createLayout-陣列物件搭配迴圈.html
@@ -111,7 +111,7 @@
                                         //呼叫卡片元件
                                         //return <Card title="基本版" price="$1000" desc="基本版說明區" btnName="免費試用" />
                                         // 改用陣列傳值給元件
-                                        return <Card title={item.title} price={item.price} desc={item.desc} btnName={item.btnName} />
+                                        return <Card key={item.id} title={item.title} price={item.price} desc={item.desc} btnName={item.btnName} />
                                     })
                                 }
                                 <h2>方案使用說明</h2>
